--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <link rel="stylesheet" type="text/css" href="css/semantic/semantic.min.css"/>
+	    <link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<title>TestApp2</title>
 		<script id="sap-ui-bootstrap"
 			src="../../resources/sap-ui-core.js"
@@ -13,6 +15,12 @@
 			data-sap-ui-async="true"
 			data-sap-ui-frameOptions="trusted">
 		</script>
+		<!--<script language="javascript"-->
+		<!--	src="https://code.jquery.com/jquery-3.1.1.min.js"-->
+		<!--	integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="-->
+		<!--	crossorigin="anonymous">-->
+		<!--</script>-->
+		<!--<script type="text/javascript" src="css/semantic/semantic.min.js"></script>-->
 	</head>
 	<body class="sapUiBody">
 		<div data-sap-ui-component data-name="ta2.TestApp2" data-id="container" data-settings='{"id" : "TestApp2"}'></div>
